testing/errors/opnotsupp3.a
	b = "str" = []	; -> "Operation not supported."
